# shadow_agent

./: .gitignore  README.md  docker-compose.yml  project_structure.txt
client/: CMakeLists.txt
client inscure/: CMakeLists.txt  server.crt
client inscure/src/: provision_test_insecure.cpp
client/logs/: log_1744898840.json  log_2025-04-22 14:11:17.json  log_2025-04-23 16:05:39.json  log_2025-04-23 16:06:57.json  log_2025-04-23 16:06:59.json  log_2025-04-23 16:09:36.json  log_2025-04-24 09:11:19.json
client/scripts/: cleanup_logs.sh  device_monitor.sh
client/src/: monitoring_test.cpp  provision_test.cpp  provision_test_insecure.cpp
monitoring-service/: .env  README.md
monitoring-service/client/: CMakeLists.txt  grpc-client.cpp  monitoring-test.cpp
monitoring-service/client/config/: config.txt
monitoring-service/client/logs/: hardware_metrics_2025-05-07_09-37-02.json  hardware_metrics_2025-05-07_09-38-02.json  hardware_metrics_2025-05-07_09-39-02.json  hardware_metrics_2025-05-07_09-40-02.json  hardware_metrics_2025-05-07_09-41-02.json  hardware_metrics_2025-05-07_09-42-02.json  hardware_metrics_2025-05-07_09-43-02.json  hardware_metrics_2025-05-07_09-44-02.json  hardware_metrics_2025-05-07_09-45-02.json  hardware_metrics_2025-05-07_09-46-03.json  hardware_metrics_2025-05-07_09-47-02.json  hardware_metrics_2025-05-07_09-48-02.json  hardware_metrics_2025-05-07_09-49-03.json  hardware_metrics_2025-05-07_09-50-02.json  hardware_metrics_2025-05-07_09-51-02.json  hardware_metrics_2025-05-07_09-52-02.json  hardware_metrics_2025-05-07_09-53-03.json  hardware_metrics_2025-05-07_09-54-02.json  hardware_metrics_2025-05-07_09-55-02.json  hardware_metrics_2025-05-07_09-56-03.json  hardware_metrics_2025-05-07_09-57-02.json  hardware_metrics_2025-05-14_09-23-02.json  hardware_metrics_2025-05-14_09-24-02.json  hardware_metrics_2025-05-14_09-25-02.json  hardware_metrics_2025-05-14_09-26-02.json  hardware_metrics_2025-05-14_09-27-02.json  hardware_metrics_2025-05-14_09-28-02.json  hardware_metrics_2025-05-14_09-29-01.json  hardware_metrics_2025-05-14_09-30-02.json  hardware_metrics_2025-05-14_09-31-02.json  hardware_metrics_2025-05-14_09-32-02.json  hardware_metrics_2025-06-10_17-10-35.json  hardware_metrics_2025-06-10_17-11-01.json  hardware_metrics_2025-06-10_17-22-00.json  hardware_metrics_2025-06-10_17-23-02.json  hardware_metrics_2025-06-10_17-24-00.json  (+68 more)
monitoring-service/proto/: monitoring.proto
monitoring-service/server/: CMakeLists.txt  grpc-server.cpp
monitoring-service/server/src/: alert_manager.cpp  alert_manager.h  metrics_analyzer.cpp  metrics_analyzer.h  mysql_metrics_storage.cpp  mysql_metrics_storage.h  rabbitmq_consumer.cpp  rabbitmq_consumer.h  server.cpp
monitoring-service/testRabbitMQ/: client  client.cpp  server  server.cpp
ota-update-service/: # Code Citations.md  CMakeLists.txt  README.md  ota-update-service.code-workspace
ota-update-service/client/: CMakeLists.txt  client_main.cpp  ota_client_impl.cpp  ota_client_impl.h
ota-update-service/client/include/: ota_client.h  partition_manager.h  update_manager.h
ota-update-service/client/src/: main.cpp  main_client.cpp  ota_client.cpp  partition_manager.cpp  update_manager.cpp
ota-update-service/common/: CMakeLists.txt
ota-update-service/common/include/: checksum.h  logging.h  types.h
ota-update-service/common/src/: checksum.cc  logging.cc
ota-update-service/include/: mender_client.hpp  ota_service_impl.hpp
ota-update-service/proto/: ota_service.proto
ota-update-service/server/: CMakeLists.txt  db_handler.cpp  db_handler.h  grpc_service_impl.cpp  grpc_service_impl.h  ota_update_service.cpp  ota_update_service.h  server_main.cpp
ota-update-service/server/include/: database_manager.h  db_connector.h  file_manager.h  firmware_manager.h  ota_server.h
ota-update-service/server/src/: database_manager.cpp  db_connector.cc  file_manager.cpp  firmware_manager.cc  main_server.cpp  ota_server.cc  ota_server.cpp
ota-update-service/server/updates/app/print_hello/: print_hello_001
ota-update-service/src/: mender_client.cpp  ota_service.grpc.pb.cc  ota_service.grpc.pb.h  ota_service.pb.cc  ota_service.pb.h  ota_service_impl.cpp  server.cpp
proto/: monitoring.proto  provision.pb.h  provision.proto
provision-service/: .env  CMakeLists.txt  Dockerfile  README.md
provision-service/client/: CMakeLists.txt
provision-service/client/include/: ConfigManager.h  ProvisionClientImpl.h  jwt_handler.hpp
provision-service/client/src/: ConfigManager.cpp  ProvisionClientImpl.cpp  db_handler.cpp  grpc_client.cpp  jwt_handler.cpp
provision-service/proto/: provision.proto  provisioning.proto
provision-service/provision-service/: .code-workspace.code-workspace  CMakeLists.txt
provision-service/provision-service/client/src/: main.cpp  provisioning_client.cpp
provision-service/provision-service/common/include/: database_manager.h  jwt_manager.h
provision-service/provision-service/common/src/: database_manager.cpp  jwt_manager.cpp
provision-service/provision-service/proto/: provisioning.grpc.pb.h  provisioning.pb.cc  provisioning.proto
provision-service/provision-service/server/include/: provisioning_service.h
provision-service/provision-service/server/src/: main.cpp  provisioning_service.cpp
provision-service/server/: CMakeLists.txt
provision-service/server/include/: ProvisionServiceImpl.h  ProvisionServiceImpl.hpp  db_handler.hpp
provision-service/server/src/: ProvisionServiceImpl.cpp  db_handler.cpp  grpc_server.cpp  jwt_handler.cpp
provision-service/src/: ProvisionServiceImpl.cpp  db_handler.cpp  grpc_server.cpp  jwt_handler.cpp
provision-service/token/: token.txt
services/: CMakeLists.txt  ca.crt  ca.key  ca.srl  main.cpp  server.crt  server.csr  server.key
services/db/: db_handler.h
services/jwt-handler/: jwt-handler.cpp  jwt-handler.hpp
services/monitoring/src/: MonitoringServiceImpl.cpp
services/provision/: CMakeLists.txt
services/provision/include/: ProvisionServiceImpl.h  db_handler.hpp
services/provision/src/: ProvisionServiceImpl.cpp  main.cpp
(+12 files in other folders)
